--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=4001
 MONGO_URI=mongodb+srv://mongouserone:mongopassword@clusterone.9meaybm.mongodb.net/FitFibre?retryWrites=true&w=majority
+SECRET=raj12345
